[project]
name = "sample-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crewai[tools]>=1.6.1",
    "ipykernel>=7.1.0",
    "langchain>=1.1.0",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "transformers>=4.57.3",
]
